...
          Expanded(
            child: _buildTab(context, ref, "SELL", orderType == OrderType.sell,
                OrderType.sell),
          ),
          Expanded(
            child: _buildTab(
                context, ref, "BUY", orderType == OrderType.buy, OrderType.buy),
          ),
        ],
      ),
    );
  }

...
          const Text('Make sure your order is below 20K sats',
              style: TextStyle(color: AppTheme.grey2)),
          const SizedBox(height: 16),

          // 1) Currency dropdown always enabled
          CurrencyDropdown(
            key: const Key("fiatCodeDropdown"),
            label: 'Fiat code',
            onSelected: (String fiatCode) {
              // Once a fiat code is selected, enable the other fields
              setState(() {
                _isEnabled = true;
              });
...
          const SizedBox(height: 16),

          // 2) fiat amount
          _buildDisabledWrapper(
            enabled: _isEnabled,
            child: CurrencyTextField(
              key: const ValueKey('fiatAmountField'),
              controller: _fiatAmountController,
              label: 'Fiat amount',
              onChanged: (parsed) {
                setState(() {
                  _minFiatAmount = parsed.$1;
                  _maxFiatAmount = parsed.$2;
...
                  enabled: _isEnabled,
                  child: _buildPremiumSlider(),
                )
              : _buildDisabledWrapper(
                  enabled: _isEnabled,
                  child: _buildTextField('Sats amount',
                      const Key('satsAmountField'), _satsAmountController,
                      suffix: Icon(BitcoinIcons.satoshi_v1_outline).icon),
                ),

          const SizedBox(height: 16),

          // 5) Payment method
          _buildDisabledWrapper(
            enabled: _isEnabled,
            child: _buildTextField('Payment method',
                const Key('paymentMethodField'), _paymentMethodController),
          ),

          const SizedBox(height: 32),

          _buildActionButtons(context, ref, OrderType.sell),
        ],
...
              ],
            ),
          _buildDisabledWrapper(
            enabled: _isEnabled,
            child: _buildTextField(
              'Lightning Invoice or Lightning Address',
              const Key('lightningInvoiceField'),
              _lightningInvoiceController,
              nullable: true,
            ),
          ),
          const SizedBox(height: 16),
          // 6) Payment method
...
  Widget _buildPremiumSlider() {
    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        const Text('Premium (%)', style: TextStyle(color: AppTheme.cream1)),
        Slider(
          key: const Key('premiumSlider'),
          value: _premiumValue,
          min: -10,
          max: 10,
          divisions: 20,
          label: _premiumValue.toStringAsFixed(1),
          onChanged: (val) {
...
              _submitOrder(context, ref, orderType);
            }
          },
          style: ElevatedButton.styleFrom(
            backgroundColor: AppTheme.mostroGreen,
          ),
          child: const Text('SUBMIT'),
        ),
      ],
    );
  }

  ///
...
