...
                    letterSpacing: 0.3,
                  ),
                ),
                const SizedBox(height: 8),
                MultiSelectAutocomplete(
                  label: S.of(context)!.fiatCurrencies,
                  options: ['USD', 'EUR', 'VES'], // Fallback options
                  selectedValues: selectedFiatCurrencies,
                  onChanged: (values) {
                    setState(() {
                      selectedFiatCurrencies = values;
                    });
                  },
...
